# repoinfo

./: .gitignore  README.md  pyproject.toml
src/git_repo_info/: __init__.py  branches.py  cli.py  formatters.py  git.py  log.py  models.py  remotes.py  status.py  summary.py
tests/: test_branches.py  test_log.py  test_remotes.py  test_status.py  test_summary.py
